--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,30 +1,28 @@
+version: "2"
 linters:
   enable:
-    - structcheck
-    - varcheck
-    - staticcheck
-    - unconvert
-    - gofmt
-    - golint
-    - goimports
-    - ineffassign
-    - vet
-    - unused
     - misspell
-    - gosimple
-    - deadcode
+    - unconvert
   disable:
     - errcheck
-
-issues:
-  include:
-    - EXC0002
-
-run:
-  timeout: 3m
-  skip-dirs:
-    - docs
-    - hack
-    - runtimespec
-  skip-files:
-    - cmd/runj-entrypoint/cmsg.go
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
